--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Quick Plan</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="print.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="module" src="script.js" defer></script>
     </head>
